# presentations

./: .travis.yml  LICENSE  README.md  Tarjan.ipynb  default.nix  display_object.py  imperative-haskell.cabal  index.html  tracking.html
.ci/: update_pages.sh
.nix/: default.nix  pkgs.nix  versions.json
functional-devops/: default.nix  index.html  presentation.md  versions.json
functional-devops-workshop/: default.nix  index.html  presentation.md
functional-ingsoc/: default.nix  index.html  presentation.md
git-from-scratch/: .gitignore  Git.ipynb  default.nix  versions.json
how-to-stop-writing-haskell/: default.nix  index.html  presentation.md
ihaskell-can-do-that/: default.nix  index.html  links.md  presentation.md
imperative-haskell/: Comparisons.ipynb  ComparisonsPy.ipynb  README.md  Tarjan.ipynb  default.nix  stack.yaml
javascript-in-haskell/: default.nix  index.html  presentation.md
lazy-functional-state-threads/: build.sh  default.nix  index.html  presentation.md
minimal-perfect-hashing/: default.nix  index.html  presentation.md
nix/: default.nix  versions.json
partial-evaluation/: default.nix  index.html  presentation.md
popcount/: default.nix  index.html  presentation.md
sat-solvers/: default.nix  header.html  index.html  mathjax-configuration.html  presentation.md  reveal-configuration.html  revealjs-override.html
space-efficient-static-trees-graphs/: default.nix  index.html  presentation.md
tarjans-scc/: default.nix  index.html  notebook.nix  presentation.md  tarjans-scc.cabal  versions.json
typed-holes/: Collaborative.ipynb  (+6 more)
(+61 files in other folders)
