name:                imperative-haskell
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/vaibhavsagar/imperative-haskell#readme
license:             BSD3
license-file:        LICENSE
author:              Vaibhav Sagar
maintainer:          vaibhavsagar@gmail.com
copyright:           2017 Vaibhav Sagar
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
                     , containers
                     , unordered-containers
                     , vector
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/vaibhavsagar/imperative-haskell
